--- a/site da alura /index.html
+++ b/site da alura /index.html
@@ -1,20 +1,125 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <h1>Vai ser uma imagem aqui</h1>
-        <ul>
-            <li>Escola</li>
-            <li>Estudante</li>
-        </ul>
-    </header>
+:root {
+    --branco-principal: #FFFFFF;
+    --cinza-secundario: #C0C0C0;
+    --botao-azul: #167BF7;
+    --cor-de-fundo: #00030C;
+    --fonte-principal: 'Inter';
+}
 
-</body>
-</html>
+body {
+    background-color: var(--cor-de-fundo);
+    color: var(--branco-principal);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
+}
+.container__aviso {
+    font-size: 12px;
+    color: var(--cinza-secundario);
+}
+.container__botao {
+    background-color: var(--botao-azul);
+    border-radius: 5px;
+    padding: 1em;
+    color: var(--branco-principal);
+    display: block;
+    text-decoration: none;
+}
+<section class="container principal">
+        <div>
+            <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço
+                único.
+            </h1>
+            <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua">
+            <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
+            <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a>
+            <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
+        </div>
+    </section>
+    <section class="container principal">
+    <div>
+        <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço
+            único.
+        </h1>
+        <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua">
+        <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
+        <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a>
+        <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
+    </div>
+</section>
+.botao_secundario {
+    background-color: transparent;
+    border: 2px solid var(--branco-principal)
+}
+<section class="container secundario">
+    </section
+    <img src="img/Plataformas.png" alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
+    <div class="container__descricao">
+        <h2 class="descricao__titulo">Assista do seu jeito</h2>
+        <p class="descricao__texto">Aproveita a tela grande da TV ou assista no Tablet, Laptop, Celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
+      </div>
+      <section class="container secundario">
+        <img src="img/Plataformas.png" alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
+        <div class="container__descricao">
+            <h2 class="descricao__titulo">Assista do seu jeito</h2>
+            <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros
+                aparelhos. Nossa seleção de cursos não para de crescer.</p>
+        </div>
+</section>
+<section class="dispositivos">
+    <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
+    <ul class="dispositivos__lista">
+        <li>
+            <img src="img/tv.png" alt="Ícone de televisão">
+            <h3 class="lista__item">TV</h3>
+        </li>
+        <li>
+            <img src="img/computador.png" alt="Ícone de computador">
+            <h3 class="lista__item">Computador</h3>
+        </li>
+        <li>
+            <img src="img/celular.png" alt="Ícone de celular">
+            <h3 class="lista__item">Celular</h3>
+        </li>
+    </ul>
+</section>
+<footer class="rodape">
+    <img src="img/Logo.png" alt="Alura+" class="rodape__logo">
+    <ul class="rodape__lista">
+        <li class="lista__link">
+            <a href="#">Idioma</a>
+        </li>
+        <li class="lista__link">
+            <a href="#">Dispositivos compatíveis</a>
+        </li>
+        <li class="lista__link">
+            <a href="#">Contrato de assinatura</a>
+        </li>
+        <li class="lista__link">
+            <a href="#">Politica de privacidade</a>
+        </li>
+        <li class="lista__link">
+            <a href="#">Proteção de dados no Brasil</a>
+        </li>
+        <li class="lista__link">
+            <a href="#">Anuncios personalizados</a>
+        </li>
+        <li class="lista__link">
+            <a href="#">Ajuda</a>
+        </li>
+    </ul>
+    <p class="rodape__texto">® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.</p>
+    <p class="rodape__texto">Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
+</footer>
+:root {
+    --branco-principal: #FFFFFF;
+    --cinza-secundario: #C0C0C0;
+    --botao-azul: #167BF7;
+    --cor-de-fundo: #00030C;
+    --fonte-principal: 'Inter';
+    --botao-azul-efeito: #3c92fa;
+}
+.container__botao:hover {
+    background-color: var(--botao-azul-efeito);
+    color: var(--cor-de-fundo);
+}
